--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.4",
     "next": "^11.1.2",
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
